Fix whitespace appearance in CTA links with icons.

--- a/assets/sass/components/global/_googlesitekit-icon-wrapper.scss
+++ b/assets/sass/components/global/_googlesitekit-icon-wrapper.scss
@@ -21,5 +21,6 @@
 	.googlesitekit-icon-wrapper {
 		align-items: center;
 		display: inline-flex;
+		position: relative;
 	}
 }
